--- a/uebung_05/index5.html
+++ b/uebung_05/index5.html
@@ -18,7 +18,7 @@
             <!--jQuery-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <!--Open Weather API Key-->
-            <script type="text/javascript" src="data/api_keys.js"></script> 
+            <!-- <script type="text/javascript" src="data/api_keys.js"></script> -->
             <!--Bootstrap-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
@@ -41,6 +41,9 @@
                         <div class="navbar-nav">
                             <button type="button" class="btn btn-primary" onclick="resetMap()">
                                 reset Map
+                            </button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#inputModal" id="input_button">
+                                input API-key
                             </button>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">
                                 About
@@ -80,8 +83,35 @@
                                 This website enables the user to draw a rectangle onto the map canvas. The drawn rectangle is then intersected with
                                 a predefined route. For every intersection, an popup with information about the currect weather, is created. 
                                 These popups can be viewed by clicking on the corresponding marker. If the map gets to cluttered it can be reset in the 
-                                options. The weather data is fetched from OpenWeather via their OneCall API.
+                                options. The weather data is fetched from OpenWeather via their OneCall API. 
                             </p>
+                            <p>
+                                Note that you need your own API-key. You can get a personal key at https://openweathermap.org/api. You can enter your key via the input modal.
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                </div>
+            </div>
+        </div>
+        <!-- Input-Modal -->
+        <div class="modal fade" id="inputModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">About</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Enter your API-key here:
+                            </p>
+                            <form action="/action_page.php">
+                                <label for="api_key">API-key</label><br>
+                                <input type="text" id="api_key_input" name="api_key"><br>
+                                <input type="submit" value="Submit" onclick="getAPIKey()">
+                              </form> 
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -112,6 +142,9 @@
             </div>
         </div>
             <script>
+                //variable for storing the API-key
+                var openweather = null;
+
                 //Map Object
                 var map = L.map('mapdiv'); 
 
