Some minor fixes
Fixed Copyright and sidebar

--- a/uebung_06/public/index.html
+++ b/uebung_06/public/index.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <div id="bg-head">
-            <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 5 </h1>
-            <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer</p> 
+            <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 6 </h1>
+            <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer / Alexander Pilz</p> 
         </div>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,7 +49,7 @@
                                 <p class="card-text">Schneiden einer Route im GeoJSON-Format mit einem gegebenen Polygon in Münster, Deutschland.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="./Uebung 2/index.html" class="btn btn-sm btn-outline-secondary">Öffnen</a>
+                                        <a href="./uebung_2.html" class="btn btn-sm btn-outline-secondary">Öffnen</a>
                                     </div>
                                     <small class="text-muted">19.04.2021</small>
                                 </div>
@@ -63,7 +63,7 @@
                                 <p class="card-text">Schneiden einer gegebenen Route in Münster, Deutschland mit einem Polygon, welches in einer Karte eingezeichnet wird und Abfrage des Wetters an diesen Punkten.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="./Uebung 4/index.html" class="btn btn-sm btn-outline-secondary">Öffnen</a>
+                                        <a href="./uebung_4.html" class="btn btn-sm btn-outline-secondary">Öffnen</a>
                                     </div>
                                     <small class="text-muted">11.05.2021</small>
                                 </div>
@@ -77,9 +77,8 @@
         <footer id="footer" class="bg-dark text-center text-lg-start text-white sticky-bottom">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-              © 2020 Copyright: J. Balzer
+              © 2020 Copyright: J. Balzer / Alexander Pilz
             </div>
-            <!-- Copyright -->
         </footer>
     </body>
 </html> 
