--- a/uebung_06/public/uebung_2.html
+++ b/uebung_06/public/uebung_2.html
@@ -10,16 +10,13 @@
     <link rel="stylesheet" type="text/css" href="/css/uebung_2.css">
     <!--Functions-->
     <script type="text/javascript" src="/js/uebung_2.js"></script> 
-    <!--Links for the table with horizontal scrollbar-->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
     <!--Route-->
     <script type="text/javascript" src="data/route.js"></script> 
 </head>
 <body>
     <div id="bg-head">
-        <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 2 </h1>
-        <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer</p>
+        <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 6 </h1>
+        <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer / Alexander Pilz</p>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -57,7 +54,7 @@
     <footer id="footer" class="footer bg-dark text-center text-lg-start text-white">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2020 Copyright: J. Balzer
+            © 2020 Copyright: J. Balzer / Alexander Pilz
         </div>
         <!-- Copyright -->
     </footer>
