--- a/uebung_06/public/uebung_4.html
+++ b/uebung_06/public/uebung_4.html
@@ -21,8 +21,8 @@
     </head>
     <body>
         <div id="bg-head">
-            <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 4 </h1>
-            <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer</p> 
+            <h1 id="title" class="d-block p-2 bg-dark text-white">Geosoftware 1, 2021 - Übung 6 </h1>
+            <p id="subtitle" class="d-block p-2 bg-dark text-white">Abgabe von: J. Balzer / Alexander Pilz</p> 
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -48,9 +48,8 @@
         <footer id="footer" class="bg-dark text-center text-lg-start text-white sticky-bottom">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-              © 2020 Copyright: J. Balzer
+              © 2020 Copyright: J. Balzer / Alexander Pilz
             </div>
-            <!-- Copyright -->
         </footer>
     </body>
     <script>
