--- a/uebung_06/public/get_post_test.html
+++ b/uebung_06/public/get_post_test.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
         <head>
-            <meta  name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" />
-            <title>get_post_test</title>
-            <!--Route-->
-            <script type="text/javascript" src="data/route.geojson"></script> 
-            <!--Functions-->
-            <script type="text/javascript" src="lib/uebung_5.js"></script> 
-            <!--Style-->
-            <script type="text/javascript" src="lib/jQuerry_3_6_0.js"></script> 
-            <!--Leaflet-->
-            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-            <!--Leaflet Draw-->
-            <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.css' rel='stylesheet' />
-            <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.js'></script>
-            <!--jQuery-->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <!--Open Weather API Key-->
-            <!-- <script type="text/javascript" src="data/api_keys.js"></script> -->
+            <meta name="viewport" content="width=device-width, initial-scale=1"> 
             <!--Bootstrap-->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+            <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+            <script src="/bootstrap/dist/js/bootstrap.js"></script>
+            <!--jQuery-->
+            <script src="/jquerry/jquerry.js"></script>
+            <!--Leaflet-->
+            <link rel="stylesheet" href="/leaflet/dist/leaflet.css"/>
+            <script type="text/javascript" src="/leaflet/dist/leaflet.js"></script>
+            <!--Leaflet Draw-->
+            <link rel="stylesheet" href='/leaflet-draw/dist/leaflet.draw.css'/>
+            <script src='/leaflet-draw/dist/leaflet.draw.js'></script>
             <!--Style-->
-            <link href="lib/uebung_5.css" rel="stylesheet">
+            <link rel="stylesheet" type="text/css" href="/css/index.css">
+            <!--Functions-->
+            <script type="text/javascript" src="/js/uebung_4.js"></script>  
         </head>
         <body>
-            <button onclick="getDocs()">Test</button>
+            <button onclick="getDatafromDB()">Test</button>
         </body>
         <script>
-            function getDocs() {
-			
+            function getDatafromDB() { 
+                var data;
+                {$.ajax({ //handle request via ajax
+                    url: "/search", //request url is the prebuild request
+                    method: "GET", //method is GET since we want to get data not post or update it
+                    })
+                    .done(function(response) { //if the request is done -> successful
+                        //bind a popupto the given marker / the popupt is formatted in HTML and 
+                        //is enriched with information extracted from the api response
+                        data = response;
+                        console.log(data);
+                    })
+                    .fail(function(xhr, status, errorThrown) { //if the request fails (for some reason)
+                        console.log("Request has failed :(", '/n', "Status: " + status, '/n', "Error: " + errorThrown); //we log a message on the console
+                    })
+                    .always(function(xhr, status) { //if the request is "closed", either successful or not 
+                        console.log("Request completed"); //a short message is logged
+                    })
+                }
             }
         </script>
 </html> 
