--- a/uebung_06/public/index.html
+++ b/uebung_06/public/index.html
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="./Uebung 2/demo.png" alt="Uebung 2/demo.png">
+                            <img class="card-img-top" src="./gfx/input.png" alt="Uebung 2/demo.png">
                             <div class="card-body">
                                 <p class="card-text">Schneiden einer Route im GeoJSON-Format mit einem gegebenen Polygon in Münster, Deutschland.</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="./uebung 4/demo.png" alt="Uebung4/demo.png">
+                            <img class="card-img-top" src="./gfx/map.png" alt="Uebung4/demo.png">
                             <div class="card-body"> 
                                 <p class="card-text">Schneiden einer gegebenen Route in Münster, Deutschland mit einem Polygon, welches in einer Karte eingezeichnet wird und Abfrage des Wetters an diesen Punkten.</p>
                                 <div class="d-flex justify-content-between align-items-center">
